# fast-project-docs-mcp

./: .bandit  End-User Testing Guide (Full MCP Integration).md  LICENSE  README.md  SECURITY.md  TESTING_GUIDE.md  pyproject.toml  run_tests.py  verify_security.py
.kiro/settings/: mcp.json
document_generator_mcp/: __init__.py  exceptions.py
document_generator_mcp/models/: __init__.py  core.py  document_structures.py
document_generator_mcp/processors/: __init__.py  base.py  image.py  json_processor.py  markdown.py  pdf.py  registry.py  text.py  yaml_processor.py
document_generator_mcp/security/: __init__.py  config_security.py  content_security.py  logging_security.py  path_security.py  validators.py
document_generator_mcp/server/: __init__.py  main.py  mcp_server.py  tools.py
document_generator_mcp/services/: __init__.py  content_processor.py  document_generator.py  resource_analyzer.py
document_generator_mcp/templates/: __init__.py  defaults.py  manager.py
examples/: generate_documents_example.py  security_config.yaml
examples/reference_resources/requirements/: user_stories.md
examples/reference_resources/technical/: api_spec.json
generated_docs/: FitTrack_Mobile_PRD.md  FitTrack_Mobile_SPEC.md
reference_resources/requirements/: user_stories.md
tests/: __init__.py  conftest.py  test_ai_content_handling.py  test_basic_functionality.py  test_hybrid_integration.py  test_integration.py  test_mocked_hybrid_workflow.py  test_prompt_generation.py  test_security.py  test_security_simple.py
